--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -1,89 +1,88 @@
-@charset "utf-8";
-/* CSS Document */
-.titulo_mapa{
+*{
+    margin: 0px;
+    padding: 0px;
+}
+body{
+    background: #444;
+    color:white;
+}
+#contenedor{
+    width: 960px;
+    margin: auto;
+    margin-top:20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+header{
+    height: 150px;
+    background: #022B58 ;
+}
+header h1{
+    font-size: 50px;;
     text-align: center;
-    font-size: 45px;
+    line-height: 150px;
+    color: white
 }
-.cont{
-    text-align: left;
-    font-style: normal;
-    line-height: 1.35;
-    font-weight: 700;
-    font-size: 25px;
+
+nav h2{
+    font-size: 40px;
+    text-align: center;
+    line-height: 60px;
 }
-.body{
-	background-color: black;
+#contenido{
+    width: 600px;
+    height: 500px;
+    float: left;
+    background: black;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
-.datosCont{
-    text-align: right;
-    line-height: 1.35;
-    font-weight: 700;
-    font-size: 25px;
-}
-.cdir{
-    
-    font-size: 25px;
-	LINE-HEIGHT:45px
-}
-.dir{
+#contenido h4{
+    color: white;
     font-size: 16px;
-    line-height: 1.35;
+    text-align: left;
 }
-.container{
-	align-content: center
+#contenido p{
+    font-size: 16px;
+	line-height: 1.35;
+    color:white;
+    text-align: left;
 }
-.Mapa{
-	align-items: center;
+#contenido a{
+    color: blue;
+    font-size: 16px;
+    text-align: left;
+    float: left;
 }
-.nomb{
-	text-align: right
+aside{
+    width: 350px;
+    height: 500px;
+    background: white;
+    margin-top: 10px;
+    float: right;
 }
-
-.id{
-	font-size: white;
+aside p{
+    font-size: 20px;
+    text-align: left;
+    line-height: 1;
+    color:black;
 }
-.email{
-	font-size: 25px;
+.caja{
+    color:black;
+    text-align: 2;
 }
-.e{
-	font-size: 16px;
+footer{
+    background: black;
+    clear: both;
 }
-.tel{
-	font-size: 25px;
+footer h2{
+    font-size: 40px;
+    text-align: center;
+    padding: 20px;
+    font-style: italic;
 }
-.let{
-	font-size: 50px;
-	text-align: center;
-	color:white;
-	background-color: #797D7F;
+.boton{
+    color:black;
 }
-div#nom{
-	float:right;
-	width: 350px;
-	height: 450px;
-
-	color:white;
-	margin-top: 10px;
-	margin-right: 10px;
-	font-size: 22px
-}
-div#contenedor{
-	margin: auto;
-	width: 960px;
-	margin: auto;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	background-color: #212F3D
-}
-div#general{
-	margin: auto;
-	margin-top: 10px;
-	width: 960px;
-	height: 600px;
-	background-color: #212F3D;
-}
-#app-whatsapp{
-	bottom:95px;
-	display: block;
-}
-
