--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -34,20 +34,20 @@ nav h2{
     width: 600px;
     height: 500px;
     float: left;
-    background: black;
+    background: white;
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
 }
 #contenido h4{
-    color: white;
+    color: black;
     font-size: 16px;
     text-align: left;
 }
 #contenido p{
     font-size: 16px;
 	line-height: 1.35;
-    color:white;
+    color:black;
     text-align: left;
 }
 #contenido a{
@@ -85,4 +85,29 @@ footer h2{
 }
 .boton{
     color:black;
+}
+.container-redes{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container-redes a{
+    margin-top: 4px;
+}
+
+.container-redes img{
+    width: 60px;
+    padding: 4px;
+    background: rgba(0,0,0,0.0);
+    cursor: pointer;
+    border-radius: 100%;
+    transition: all 300ms;
+}
+
+.container-redes a:hover img{
+    background: rgba(0,0,0,0.10);
 }
