--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -1,137 +1,112 @@
 *{
     margin: 0px;
     padding: 0px;
-   
 }
 body{
-    background: #444;
+    background: #252940;
     color:white;
 }
+/** La caja donde se contiene todo**/
 #contenedor{
-
     width: 960px;
     margin: auto;
-    margin-top:20px;
+    margin-top:10px;
     margin-bottom: 20px;
     border-radius: 20px;
     overflow: hidden;
-    background: black;
+    background: #252940;
 }
-header{
+
+header{ /** Apartado donde se encuentra el titulo de contacto**/
     height: 150px;
-    background: #022B58 ;
+    width: 960px;
+    background: #5B6F94;
 }
 header h1{
     font-size: 50px;;
     text-align: center;
     line-height: 150px;
-    color: white
+    color: white;
+    background: #252940;
 }
-
+/**Barra de navegación **/
 nav h2{
     font-size: 40px;
     text-align: center;
     line-height: 60px;
+    background: white;
 }
+/**Caja donde esta el mapa**/
 #contenido{
-    width: 600px;
-    height: 500px;
-    float: left;
-    background: black;
+    width: 590px;
+    height: 420 px;
+    float:left;
+    background-color: #252940;
     margin-top: 10px;
     margin-right: 10px;
-    margin-bottom: 10px;
 }
-#contenido h4{
-    color: black;
-    font-size: 16px;
-    text-align: left;
-}
-#contenido p{
-    font-size: 16px;
-	line-height: 1.35;
-    color:white
-}
-#contenido a{
-    color: blue;
-    font-size: 16px;
-    text-align: left;
-    float: left;
-}
+/** Parte del formulario**/
 aside{ /*Color de las letras*/
-    width: 350px;
+    width: 360px;
     height: 500px;
-    background: black;
+    background:#252940;
     margin-top: 10px;
     float: right;
 }
-aside p{
+aside p{ 
     font-size: 20px;
     text-align: left;
     line-height: 1;
-    color: white;
+    color: rgb(255, 255, 255); /** Colores de las letras en el apartado de formulario**/
     margin-top: 10px;
     margin-left: 20px;
 }
 
-footer{
-    background: white;
-    clear: both;
-    text-align: left;
-}
-footer h2{
-    font-size: 40px;
-    text-align: left;
-    padding: 20px;
-    font-style: italic;
-}
-
 .boton{
     color:black;
 }
-.container-redes{
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
-.container-redes a{
-    margin-top: 4px;
-}
-
-.container-redes img{
-    width: 60px;
-    padding: 4px;
-    background: rgba(0,0,0,0.0);
-    cursor: pointer;
-    border-radius: 100%;
-    transition: all 300ms;
-}
-footer{
-    background: black;
+footer{ /**Apatado de la direccón **/
+    background:#252940;
     clear: both;
     color:white;
-    margin-top: 2px;
+    margin-top: 6px;
 }
-.dir{
-    font-size: 20px;
-    text-align: inherit;
-    margin-left: 30px;
-}
+/** Apartado de dirección, modifica el tamaño de letra del titulo **/
 footer h2{
-    font-size: 40px;
+    font-size: 35px;
     text-align: left;
     padding: 20px;
     font-style: italic;
-    margin-top: 1px;
-    margin-bottom: 1px;
-    
+    margin-top: 4px;
+    margin-bottom: 0.5px;
 }
-.boton{
-    color:black;
+/** Complemento del anterior, da el formato de la dirección**/
+.dir{
+    font-size: 20px;
+    margin-left: 30px;
+    text-align: 4px;
+    margin-top: 1px;
+}
+/** Parte de los iconos de WhatsApp**/
+.container-redes{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container-redes a{
+    margin-top: 1px;
+}
+
+.container-redes img{
+    width: 60px;
+    padding: 4px;
+    border-radius: 100%;
+    transition: all 300ms;
 }
 .container-redes{
     position: fixed;
@@ -149,9 +124,8 @@ footer h2{
 .container-redes img{
     width: 60px;
     padding: 4px;
-    background: rgba(0,0,0,0.0);
+   /** background: rgba(0,0,0,0.0);**/
     cursor: pointer;
     border-radius: 100%;
     transition: all 300ms;
 }
-
