--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -11,8 +11,6 @@ body{
     width: 960px;
     margin: auto;
     margin-top:10px;
-    margin-bottom: 20px;
-    border-radius: 20px;
     overflow: hidden;
     background: #252940;
 }
@@ -20,7 +18,6 @@ body{
 header{ /** Apartado donde se encuentra el titulo de contacto**/
     height: 150px;
     width: 960px;
-    background: #5B6F94;
 }
 header h1{
     font-size: 50px;;
@@ -34,7 +31,6 @@ nav h2{
     font-size: 40px;
     text-align: center;
     line-height: 60px;
-    background: white;
 }
 /**Caja donde esta el mapa**/
 #contenido{
@@ -52,12 +48,13 @@ aside{ /*Color de las letras*/
     background:#252940;
     margin-top: 10px;
     float: right;
+    color:black;
 }
 aside p{ 
     font-size: 20px;
     text-align: left;
     line-height: 1;
-    color: rgb(255, 255, 255); /** Colores de las letras en el apartado de formulario**/
+    color:white; /** Colores de las letras en el apartado de formulario**/
     margin-top: 10px;
     margin-left: 20px;
 }
@@ -74,18 +71,16 @@ footer{ /**Apatado de la direccón **/
 }
 /** Apartado de dirección, modifica el tamaño de letra del titulo **/
 footer h2{
-    font-size: 35px;
+    font-size: 30px;
     text-align: left;
-    padding: 20px;
-    font-style: italic;
+    padding: 10px;
     margin-top: 4px;
     margin-bottom: 0.5px;
 }
 /** Complemento del anterior, da el formato de la dirección**/
 .dir{
-    font-size: 20px;
-    margin-left: 30px;
-    text-align: 4px;
+    font-size: 16px;
+    margin-left: 10px;
     margin-top: 1px;
 }
 /** Parte de los iconos de WhatsApp**/
@@ -128,4 +123,8 @@ footer h2{
     cursor: pointer;
     border-radius: 100%;
     transition: all 300ms;
+}
+/** Barra de Navegación**/
+.active {
+    background-color: #4CAF50;
 }
