--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -1,88 +1,58 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body{
-    background: #252940;
-    color:white;
-}
-/** La caja donde se contiene todo**/
-#contenedor{
-    width: 960px;
-    margin: auto;
-    margin-top:10px;
-    overflow: hidden;
-    background: #252940;
-}
-
-header{ /** Apartado donde se encuentra el titulo de contacto**/
-    height: 150px;
-    width: 960px;
-}
-header h1{
-    font-size: 50px;;
-    text-align: center;
-    line-height: 150px;
     color: white;
-    background: #252940;
+    font-family: 'calibri';
+    background:#072446;
+    margin: auto;
+    
 }
-/**Barra de navegación **/
-nav h2{
+header {
+    /*background:url(/img/Colorcard-hex_071746-www.colorbook.io.png);*/
+    background: #0a2f58;
+    height: 250px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+   
+}
+
+section{
+    min-width: 800px;
+    margin: auto;
+    padding: 5px 0;
+}
+/*Titulo de tapiceria acuario */
+section h1{
     font-size: 40px;
+    padding: 5px 0;
+
+}
+.conte{
     text-align: center;
-    line-height: 60px;
 }
-/**Caja donde esta el mapa**/
-#contenido{
-    width: 590px;
-    height: 420 px;
-    float:left;
-    background-color: #252940;
-    margin-top: 10px;
-    margin-right: 10px;
+/*Parte de los botones inicio, catalogo y contacto**/
+.conte p{
+    font-size: 60px;
+    font-weight: bold;
+    margin: 30px 0px;
 }
-/** Parte del formulario**/
-aside{ /*Color de las letras*/
-    width: 360px;
-    height: 500px;
-    background:#252940;
-    margin-top: 10px;
-    float: right;
-    color:black;
-}
-aside p{ 
-    font-size: 20px;
-    text-align: left;
-    line-height: 1;
-    color:white; /** Colores de las letras en el apartado de formulario**/
-    margin-top: 10px;
-    margin-left: 20px;
+/**Barra de menu: inicio, catalogo, contacto **/
+.conte a{
+    color: white;
+    text-decoration: none;
+    background: #04aed9;
+    padding: 8px 20px;
+    border-radius: 30px;
+    font-size: 19px;
+    margin: 20px;
 }
 
-.boton{
-    color:black;
-}
-
-footer{ /**Apatado de la direccón **/
-    background:#252940;
-    clear: both;
-    color:white;
-    margin-top: 6px;
-}
-/** Apartado de dirección, modifica el tamaño de letra del titulo **/
-footer h2{
-    font-size: 30px;
-    text-align: left;
-    padding: 10px;
-    margin-top: 4px;
-    margin-bottom: 0.5px;
-}
-/** Complemento del anterior, da el formato de la dirección**/
-.dir{
-    font-size: 16px;
-    margin-left: 10px;
-    margin-top: 1px;
-}
 /** Parte de los iconos de WhatsApp**/
 .container-redes{
     position: fixed;
@@ -124,7 +94,76 @@ footer h2{
     border-radius: 100%;
     transition: all 300ms;
 }
-/** Barra de Navegación**/
-.active {
-    background-color: #4CAF50;
+#contenido{
+    width: 220px;
+    height: 510px;
+    float:left;
+    background-color: #072446;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+iframe{
+    width: 779px;
+    height: 494px;
+    margin-left:40px;
+    float: left;
+}
+aside{ /*Color de las letras*/
+    width: 530px;
+    height: 500px;
+    background:#072446;
+    margin-top: 10px;
+    float: right;
+    color:black;
+}
+aside p{ 
+    font-size: 20px;
+    text-align: left;
+    line-height: 2;
+    color:white; /** Colores de las letras en el apartado de formulario**/
+    margin-top: 5px;
+    margin-left: 40px;
+}
+/*Caja donde esta el mapa */
+
+
+footer{ /**Apatado de la direccón **/
+    background: #072446;
+    clear: both;
+    color:white;
+    margin-top: 6px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+/** Apartado de dirección, modifica el tamaño de letra del titulo **/
+footer h1{
+    font-size: 26px;
+    text-align: left;
+    margin-left: 5px;
+}
+footer h2{
+    font-size: 26px;
+    margin-top: 10px;
+    text-align: left;
+    margin-left: 5px;
+
+}
+.dir{
+    font-size: 21px;
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 5px;
+}
+footer p{
+    font-size: 21px;
+    text-align: left;
+    margin-top: 10px;
+    margin-left: 5px;
+}
+footer a{
+    font-size: 21px;
+    color: rgb(42, 162, 231);
+    margin-top: 10px;
+    margin-left: 5px;
 }
