--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -12,7 +12,8 @@ body{
 }
 header {
     /*background:url(/img/Colorcard-hex_071746-www.colorbook.io.png);*/
-    background: #0a2f58;
+    /*background: #0a2f58;*/
+    background: url(/Contacto//img/nebulosa-de-colores-de-fondo-papel-pintado-3840x1080-14124_75.jpg);
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -27,20 +28,26 @@ section{
     margin: auto;
     padding: 5px 0;
 }
-/*Titulo de tapiceria acuario */
+/*Logo */
 section h1{
     font-size: 40px;
     padding: 5px 0;
 
 }
+/*
+section img{
+    border-radius: 20px;
+    width: 70px;
+    height: 70px;
+}*/
 .conte{
     text-align: center;
 }
 /*Parte de los botones inicio, catalogo y contacto**/
 .conte p{
-    font-size: 60px;
+    font-size: 80px;
     font-weight: bold;
-    margin: 30px 0px;
+    margin: 50px 0px;
 }
 /**Barra de menu: inicio, catalogo, contacto **/
 .conte a{
