--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -44,7 +44,7 @@ section img{
 }
 /*Parte de los botones inicio, catalogo y contacto**/
 .conte p{
-    font-size: 80px;
+    font-size: 60px;
     font-weight: bold;
     margin: 35px 0px;
 }
@@ -107,7 +107,7 @@ textarea{
     margin-left: 40px;
     margin-top: 20px
 }
-input[type=submit]{
+.boton{
     width: 120px;
     height: 30px;
     border-radius: 20px;
@@ -128,8 +128,7 @@ label{
     text-transform: uppercase;
     text-shadow: 0px 1px 0px #fff;
     margin-top: 20px;
-    margin-left: 40px;
-    
+    margin-left: 40px;  
 }
 
 .fecha{
@@ -148,7 +147,7 @@ label{
 footer{ /**Apatado de la direccón **/
    position: fixed;
    bottom:0;
-   height:95px;
+   height:83px;
    left: 0;
    width:100%;
    background:#072446;
@@ -157,7 +156,7 @@ footer{ /**Apatado de la direccón **/
 }
 /** Apartado de dirección, modifica el tamaño de letra del titulo **/
 footer h1{
-    font-size: 30px;
+    font-size: 24px;
     text-align: left;
     margin-left: 1px;
 }
@@ -168,7 +167,7 @@ footer h2{
 }
 /*Dirección Calle Lazaro Cárdenas*/
 .dir{
-    font-size: 21px;
+    font-size: 16px;
     text-align: left;
     margin-left: 5px;
 }
