--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -1,15 +1,20 @@
-*{
-    margin:0;
+/* PARTE GENERAL DE LA PAGINA */
+
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     color: white;
     font-family: 'calibri';
-    background:#072446;
+    background: #072446;
     margin: auto;
-
 }
+
+/* ENCABEZADO */
+
 header {
     /*background:url(/img/Colorcard-hex_071746-www.colorbook.io.png);*/
     /*background: #0a2f58;*/
@@ -19,174 +24,40 @@ header {
     background-repeat: no-repeat;
     margin-top: 10px;
     margin-left: 40px;
-    margin-right: 40px;  
+    margin-right: 40px;
     display: grid;
 }
 
-section{
-    min-width: 800px;
-    margin: auto;
-    padding: 5px 0;
-}
-/*Logo */
-section h1{
-    font-size: 40px;
-    padding: 5px 0;
-}
-/*
-section img{
-    border-radius: 20px;
-    width: 70px;
-    height: 70px;
-}*/
-.conte{
+.conte {
     text-align: center;
 }
-/*Parte de los botones inicio, catalogo y contacto**/
-.conte p{
-    font-size: 60px;
+
+/* TAMAÑO DE LA LETRA DE CONTACTO, ASI COMO EL MARGEN SEPARADO DE LA BARRA DE NAVEAGCIÓN*/
+
+.conte p {
+    font-size: 90px;
     font-weight: bold;
-    margin: 35px 0px;
+    margin: 40px 0px;
 }
-/**Barra de menu: inicio, catalogo, contacto **/
-.conte a{
+
+/* BARRA DE NAVEGACIÓN */
+
+.conte a { 
+     font-size: 16px;
     color: white;
     text-decoration: none;
     background: #04aed9;
     padding: 8px 20px;
     border-radius: 30px;
-    font-size: 19px;
+  
     margin: 20px;
 }
 
+/*                       FIN DEL ENCABEZADO                     */
 
-/*Relacionado con el Mapa y la caja que lo contiene*/
-#contenido{
-    width: 220px;
-    height: 500px;
-    float:left;
-    background-color: #072446;
-    margin-top: 15px;
-    margin-left: 30px;
-}
-
-iframe{
-    width: 779px;
-    height: 480px;
-    margin-left:10px;
-}
-/*Todolo lo relacionado con el formulario */
-aside{ /*Color de las letras*/
-    width: 430px;
-    height: 570px;
-    margin-right:85px;
-    margin-top: 15px;
-    float: right;
-    color:black;
-    background: #072446;
-}
-
-aside h2{
-    font-size: 36px;
-    color: white;
-    margin-left: 40px;
-    margin-top: 15px;
-}
-
-input[type=text], [type=text]{
-    width: 300px;
-    height: 35px;
-    font: 14px normal normal;
-    margin-top: 10px;
-    margin-left: 40px;
-}
-textarea{
-    width: 300px;
-    height: 110px;
-    font: 14px normal normal;
-    margin-left: 40px;
-    margin-top: 20px
-}
-.boton{
-    width: 120px;
-    height: 30px;
-    border-radius: 20px;
-    border: 0px;
-    background-color: #32A43E;
-    margin-top: 20px;
-    margin-left: 40px;    
-}
-p{
-    text-shadow: 0 1px #fff;
-    font-size: 24px;
-    margin-top: 5px;
-}
-label{
-    margin: 11px 20px 0px 0 0;
-    font-size: 16px;
-    color: #b3aba1;
-    text-transform: uppercase;
-    text-shadow: 0px 1px 0px #fff;
-    margin-top: 20px;
-    margin-left: 40px;  
-}
-
-.fecha{
-    width: 300px;
-    height: 30px;
-    font: 14px normal normal;
-    margin-left: 40px;
-    margin: 11px 20px 0px 0 0;
-    font-size: 16px;
-    color: #b3aba1;
-    text-transform: uppercase;
-    text-shadow: 0px 1px 0px #fff;
-
-}
-/*Todo lo relacionado con  la dirección de la pagina web */
-footer{ /**Apatado de la direccón **/
-   position: fixed;
-   bottom:0;
-   height:83px;
-   left: 0;
-   width:100%;
-   background:#072446;
-   margin-left: 40px;
-   margin-right: 40px;
-}
-/** Apartado de dirección, modifica el tamaño de letra del titulo **/
-footer h1{
-    font-size: 24px;
-    text-align: left;
-    margin-left: 1px;
-}
-footer h2{
-    font-size: 30px;
-    text-align: left;
-    margin-left: 5px;
-}
-/*Dirección Calle Lazaro Cárdenas*/
-.dir{
-    font-size: 16px;
-    text-align: left;
-    margin-left: 5px;
-}
-/*Nombres de los Tapiceros como Eduardo, Jesus etc*/
-footer p{
-    font-size: 21px;
-    text-align: left;
-    margin-top: 5px;
-    margin-left: 5px;
-}
-/*Enlaces de los números*/
-footer a{
-    font-size: 21px;
-    color: rgb(42, 162, 231);
-    margin-top: 5px;
-    margin-left: 5px;
-}
 /** Parte de los iconos de WhatsApp**/
-.container-redes{
+
+.container-redes {
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -195,17 +66,18 @@ footer a{
     justify-content: center;
 }
 
-.container-redes a{
+.container-redes a {
     margin-top: 1px;
 }
 
-.container-redes img{
+.container-redes img {
     width: 60px;
     padding: 4px;
     border-radius: 100%;
     transition: all 300ms;
 }
-.container-redes{
+
+.container-redes {
     position: fixed;
     bottom: 80px;
     right: 40px;
@@ -213,20 +85,151 @@ footer a{
     flex-direction: column;
     justify-content: center;
 }
-/*
-.container-redes a{
-    margin-top: 4px;
-}*/
 
-/**.container-redes img{
-    width: 60px;
-    padding: 4px;**/
-   /** background: rgba(0,0,0,0.0);**/
-   /** cursor: pointer;
-    border-radius: 100%;
-    transition: all 300ms;
-    */
-/*}**/
+/*Relacionado con el Mapa y la caja que lo contiene*/
+
+section {
+    min-width: 800px;
+    margin: auto;
+    padding: 5px 0;
+}
+
+#contenido {
+    width: 220px;
+    height: 500px;
+    float: left;
+    background-color: #072446;
+    margin-top: 15px;
+    margin-left: 30px;
+}
+
+iframe {
+    width: 779px;
+    height: 480px;
+    margin-left: 10px;
+}
+
+/*Todolo lo relacionado con el formulario */
+
+aside {
+    /*Color de las letras*/
+    width: 430px;
+    height: 570px;
+    margin-right: 85px;
+    margin-top: 15px;
+    float: right;
+    color: black;
+    background: #072446;
+}
+
+aside h2 {
+    font-size: 36px;
+    color: white;
+    margin-left: 40px;
+    margin-top: 15px;
+}
+
+input[type=text], [type=text] {
+    width: 300px;
+    height: 35px;
+    font: 14px normal normal;
+    margin-top: 10px;
+    margin-left: 40px;
+}
+
+textarea {
+    width: 300px;
+    height: 110px;
+    font: 14px normal normal;
+    margin-left: 40px;
+    margin-top: 20px
+}
+
+.boton {
+    width: 120px;
+    height: 30px;
+    border-radius: 20px;
+    border: 0px;
+    background-color: #32A43E;
+    margin-top: 20px;
+    margin-left: 40px;
+}
+
+label {
+    margin: 11px 20px 0px 0 0;
+    font-size: 16px;
+    color: #b3aba1;
+    text-transform: uppercase;
+    text-shadow: 0px 1px 0px #fff;
+    margin-top: 20px;
+    margin-left: 40px;
+}
+
+.fecha {
+    width: 300px;
+    height: 30px;
+    font: 14px normal normal;
+    margin-left: 40px;
+    margin: 11px 20px 0px 0 0;
+    font-size: 16px;
+    color: #b3aba1;
+    text-transform: uppercase;
+    text-shadow: 0px 1px 0px #fff;
+}
+
+footer {
+    /**Apatado de la direccón **/
+    position: fixed;
+    bottom: 0;
+    height: 83px;
+    left: 0;
+    width: 100%;
+    background: #072446;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+/** Apartado de dirección, modifica el tamaño de letra del titulo **/
+
+footer h1 {
+    font-size: 24px;
+    text-align: left;
+    margin-left: 1px;
+}
+
+footer h2 {
+    font-size: 30px;
+    text-align: left;
+    margin-left: 5px;
+}
+
+/*Dirección Calle Lazaro Cárdenas*/
+
+.dir {
+    font-size: 16px;
+    text-align: left;
+    margin-left: 5px;
+}
+
+/*Nombres de los Tapiceros como Eduardo, Jesus etc*/
+
+footer p {
+    font-size: 21px;
+    text-align: left;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+/*Enlaces de los números*/
+
+footer a {
+    font-size: 21px;
+    color: rgb(42, 162, 231);
+    margin-top: 5px;
+    margin-left: 5px;
+}
+/* VENTANA MODAL */
+
 .modalmask {
     position: fixed;
     font-family: Arial, sans-serif;
