--- a/Catalogo/css/catalogo.css
+++ b/Catalogo/css/catalogo.css
@@ -128,7 +128,43 @@ body {
 	background: linear-gradient(#7c6cb9, #081c3c);
 }
 
-.section {
+.tabla4 {
+	background: url(/Catalogo/img/fondo2.jpg);
+	align-items: center;
+	background-repeat: no-repeat;
+	width: 33%;
+	height: 550px;
+	margin: auto;
+	border: 1px solid #343759;
+	border-radius: 4px;
+	box-shadow: 0px 0px 4px 0px #343759;
+	padding: 250px 60px;
+	text-align: center;
+	flex-grow: 1;
+	columns: #343759;
+}
+
+.tabla4>a {
+	text-align: center;
+	font-size: 60px;
+	margin-bottom: 30px;
+	top: 30%;
+	bottom: 30%;
+	width: 50%;
+	text-decoration: none;
+	color: white;
+}
+
+.tabla4:hover {
+	background: #343759;
+	color: #f1f1f2;
+	transition: 0.2 all;
+	transforms: scale(1.1);
+	cursor: pointer;
+	background: linear-gradient(#7c6cb9, #081c3c);
+}
+
+section {
 	width: 100%;
 	margin-bottom: 25px;
 }
