Enlazando apartados de las paginas

--- a/Administrador/css/styl.css
+++ b/Administrador/css/styl.css
@@ -44,7 +44,7 @@ header {
 
 .conte a {
     font-size: 17px;
-    color: black;
+    color:white;
     text-decoration: none;
     background: #04aed9;
     padding: 8px 20px;
