--- a/ATD/css/stylesus.css
+++ b/ATD/css/stylesus.css
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-    background: url(/Administrador/img/barra.jpeg);
+    background: url(/Contacto/img/a70dbb99-991d-4941-b253-dab058386245.jfif);
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
