--- a/Administrador/css/styl.css
+++ b/Administrador/css/styl.css
@@ -18,7 +18,7 @@ body {
 header {
     /*background:url(/img/Colorcard-hex_071746-www.colorbook.io.png);*/
     /*background: #0a2f58;*/
-    background: url(/Contacto/img/101559.jpg);
+    background: url(/Contacto/img/WhatsApp\ Image\ 2021-01-05\ at\ 22.30.46.jpeg);
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
