--- a/Administrador/css/styles.css
+++ b/Administrador/css/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-    background: url(/Administrador/img/barra.jpeg);
+    background: url(/Contacto/img/WhatsApp\ Image\ 2021-01-05\ at\ 22.30.46.jpeg);
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
