--- a/Contacto/css/estilos.css
+++ b/Contacto/css/estilos.css
@@ -16,9 +16,7 @@ body {
 /* ENCABEZADO */
 
 header {
-    /*background:url(/img/Colorcard-hex_071746-www.colorbook.io.png);*/
-    /*background: #0a2f58;*/
-    background: url(/Contacto/img/101559.jpg);
+    background: url(/Contacto/img/a70dbb99-991d-4941-b253-dab058386245.jfif);
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
