--- a/Catalogo/css/barra.css
+++ b/Catalogo/css/barra.css
@@ -1,19 +1,19 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    color:white;
+
+body {
+    color: white;
     font-family: ´calibri´;
     background: #072446;
     margin: auto;
-
-  ;
+    ;
 }
 
-header{
-    background: url(/Catalogo/img/img/barra.jpeg);
+header {
+    background: url(/Contacto/img/a70dbb99-991d-4941-b253-dab058386245.jfif);
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -22,28 +22,25 @@ header{
     margin-right: 40px;
     display: grid;
 }
-.conte{
-   
+
+.conte {
     text-align: center;
 }
 
 /*Parte de los botones inicio, catalogo y contacto**/
-.conte p{
-    font-size: 90px;
+
+.conte p {
+    font-size: 85px;
     font-weight: bold;
     margin: 40px 0px;
-    text-shadow: 
-
-    3px 3px 1px black,
-  
-    5px 5px 2px black,
-  
-    8px 8px 3px black;
+    text-shadow: 3px 3px 1px black, 5px 5px 2px black, 8px 8px 3px black;
 }
+
 /**Barra de menu: inicio, catalogo, contacto **/
-.conte a{
+
+.conte a {
     font-size: 16px;
-    color:white;
+    color: white;
     text-decoration: none;
     background: #04aed9;
     padding: 8px 20px;
